test/src/e2e_vm_tests/test_programs/should_pass/language/use_full_path_names/src/bar.sw
library;

pub enum Bar {
    Baz: bool,
}
