test/src/e2e_vm_tests/test_programs/should_fail/configurables_in_lib/src/lib.sw
library lib;

configurable {
    C0: bool = true,
    C1: u64 = 42,
    C2: b256 = 0x1111111111111111111111111111111111111111111111111111111111111111,
}
